--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port = 8888
 
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
+
+spring,datasource.url=jdbc:postgresql://localhost:5432/online_chat_db
+spring.datasource.username=postgres
+spring.datasource.password=2222
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
